--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "@types/nodemailer": "^6.4.7",
     "prisma": "^4.10.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
@@ -19,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.1"
   }
 }
