--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.3.36",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/nodemailer": "^6.4.7",
+    "jest": "^29.4.3",
     "prisma": "^4.10.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
