--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
+    "@types/cors": "^2.8.13",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/nodemailer": "^6.4.7",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
   }
